--- a/Russian/main/Settings.apk/res/values-ru/strings.xml
+++ b/Russian/main/Settings.apk/res/values-ru/strings.xml
@@ -1941,10 +1941,10 @@
     <string name="gadget_gps">GPS</string>
     <string name="gadget_sync">Синхронизация</string>
     <string name="gadget_brightness_template">Яркость: %1$s</string>
-
-
-
-
+    <string name="gadget_brightness_state_auto">авто</string>
+    <string name="gadget_brightness_state_full">макс.</string>
+    <string name="gadget_brightness_state_half">пол-на</string>
+    <string name="gadget_brightness_state_off">выкл</string>
 
     <string name="credentials_title">Хранилище сертификатов</string>
     <string name="credentials_install">Установка с SD-карты</string>
@@ -2727,6 +2727,8 @@
     <string name="bird_hand_title">Режим под правую или левую руку</string>
     <string name="lewa_applock_title">Блокировка приложений</string>
     <string name="lewa_applock_summary">Необходимо задать пароль перед блокировкой</string>
+    <string name="two_finger_update_brightness">Обновление яркости двумя пальцами</string>
+    <string name="two_finger_update_brightness_description">Для обновления яркости двигайте двумя пальцами по экрану</string>	
     <string name="locale_language_zh_cn">Китайский (упрощ.)</string>
     <string name="locale_language_zh_tw">Китайский</string>
     <string name="locale_language_en">Английский</string>
