--- a/Russian/main/LewaAppLock.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaAppLock.apk/res/values-ru/strings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="crypt_keeper_switch_input_method">Переключение метода ввода</string>
-    <string name="lock_settings_picker_title">Тип блокировки</string>
+    <string name="crypt_keeper_switch_input_method">Сменить способ ввода</string>
+    <string name="lock_settings_picker_title">Блокировка экрана</string>
     <string name="backup_lock_settings_picker_title">Доп. способ блокировки</string>
     <string name="unlock_set_unlock_launch_picker_title">Блокировка экрана</string>
     <string name="unlock_set_unlock_launch_picker_change_title">Изменение блок. экрана</string>
     <string name="unlock_set_unlock_launch_picker_change_summary">Смена или отключение графического ключа, PIN-кода и пароля</string>
     <string name="unlock_set_unlock_launch_picker_enable_summary">Выбрать метод блокировки экрана</string>
     <string name="unlock_backup_info_summary">Выберите альтернативный способ разблокировки экрана</string>
-    <string name="unlock_set_unlock_off_title">Нет</string>
+    <string name="unlock_set_unlock_off_title">Без блокировки</string>
 
-    <string name="unlock_set_unlock_none_title">Отключено</string>
+    <string name="unlock_set_unlock_none_title">По умолчанию</string>
     <string name="unlock_set_unlock_none_summary">Защита отключена</string>
     <string name="unlock_set_unlock_biometric_weak_title">Фейсконтроль</string>
     <string name="unlock_set_unlock_biometric_weak_summary">Низкий уровень защиты (экспериментальная функция)</string>
@@ -21,12 +21,12 @@
     <string name="unlock_set_unlock_password_title">Пароль</string>
     <string name="unlock_set_unlock_password_summary">Высокий уровень защиты</string>
     <string name="unlock_set_unlock_disabled_summary">Запрещено администратором, политикой шифрования или хранилищем учетных данных</string>
-    <string name="unlock_set_unlock_mode_off">Нет</string>
-    <string name="unlock_set_unlock_mode_none">Стандартный экран блокировки</string>
+    <string name="unlock_set_unlock_mode_off">Без блокировки</string>
+    <string name="unlock_set_unlock_mode_none">По умолчанию</string>
     <string name="unlock_set_unlock_mode_biometric_weak">Фейсконтроль</string>
-    <string name="unlock_set_unlock_mode_pattern">Защита графическим ключом</string>
+    <string name="unlock_set_unlock_mode_pattern">Графический ключ</string>
     <string name="unlock_set_unlock_mode_pin">Защита PIN-кодом</string>
-    <string name="unlock_set_unlock_mode_password">Защита паролем</string>
+    <string name="unlock_set_unlock_mode_password">Пароль</string>
     <string name="unlock_disable_lock_title">Отключить блокировку экрана</string>
     <string name="unlock_disable_lock_pattern_summary">Удалить графический ключ разблокировки</string>
     <string name="unlock_disable_lock_pin_summary">Удалить PIN-код разблокировки</string>
@@ -34,19 +34,19 @@
     <string name="unlock_change_lock_pattern_title">Изменить графический ключ разблокировки</string>
     <string name="unlock_change_lock_pin_title">Изменить PIN-код разблокировки</string>
     <string name="unlock_change_lock_password_title">Изменить пароль разблокировки</string>
-    <string name="lockpassword_password_too_short">Не менее %d символов</string>
+    <string name="lockpassword_password_too_short">Пароль должен содержать не менее %d символов</string>
     <string name="lockpassword_pin_too_short">PIN-код должен содержать не менее %d символов</string>
     <string name="lockpassword_press_continue">После завершения нажмите \"Продолжить\"</string>
     <string name="lockpassword_continue_label">Продолжить</string>
-    <string name="lockpassword_password_too_long">Не более %d символов</string>
+    <string name="lockpassword_password_too_long">Пароль должен содержать не более %d символов</string>
     <string name="lockpassword_pin_too_long">PIN-код должен содержать не более %d символов</string>
     <string name="lockpassword_pin_contains_non_digits">PIN-код должен состоять только из цифр от 0 до 9</string>
-    <string name="lockpassword_pin_recently_used">Администратор устройства запрещает использование последнего PIN-кода</string>
+    <string name="lockpassword_pin_recently_used">Нельзя использовать последний PIN-код</string>
     <string name="lockpassword_illegal_character">Пароль содержит недопустимые символы</string>
     <string name="lockpassword_password_requires_alpha">Пароль должен содержать хотя бы одну букву</string>
     <string name="lockpassword_password_requires_digit">Пароль должен содержать хотя бы одну цифру</string>
     <string name="lockpassword_password_requires_symbol">Пароль должен содержать хотя бы один символ</string>
-    <string name="lockpassword_password_recently_used">Администратор устройства запрещает использование последнего пароля</string>
+    <string name="lockpassword_password_recently_used">Нельзя использовать последний пароль</string>
     <string name="lockpassword_ok_label">ОК</string>
     <string name="lockpassword_cancel_label">Отмена</string>
     <string name="lockpattern_tutorial_cancel_label">Отмена</string>
@@ -55,13 +55,13 @@
     <string name="lockpattern_change_lock_pin_label">Изменить PIN-код разблокировки</string>
     <string name="lockpattern_need_to_unlock">Начертите существующий ключ</string>
 
-    <string name="lockpattern_need_to_unlock_wrong">Повторить:</string>
+    <string name="lockpattern_need_to_unlock_wrong">Повторить попытку:</string>
 
     <string name="lockpattern_recording_intro_header">Начертите графический ключ разблокировки</string>
     <string name="lockpattern_recording_intro_footer">Для справки нажмите \"Меню\"</string>
     <string name="lockpattern_recording_inprogress">По завершении отпустите палец</string>
     <string name="lockpattern_recording_incorrect_too_short">Соедините точки (как минимум %d). Повторите попытку:</string>
-    <string name="lockpattern_pattern_entered_header">Графический ключ разблокировки записан!</string>
+    <string name="lockpattern_pattern_entered_header">Графический ключ сохранен!</string>
     <string name="lockpattern_need_to_confirm">Для подтверждения начертите графический ключ повторно:</string>
     <string name="lockpattern_pattern_confirmed_header">Новый графический ключ разблокировки:</string>
     <string name="lockpattern_confirm_button_text">Подтвердить</string>
@@ -71,22 +71,22 @@
     <string name="lockpattern_settings_title">Графический ключ разблокировки</string>
     <string name="lockpattern_settings_enable_title">Запрашивать ключ</string>
     <string name="lockpattern_settings_enable_summary">Использовать графический ключ для защиты телефона</string>
-    <string name="lockpattern_settings_enable_visible_pattern_title">Показывать графический ключ</string>
-    <string name="lockpattern_settings_enable_tactile_feedback_title">Вибрировать при касании</string>
+    <string name="lockpattern_settings_enable_visible_pattern_title">Показывать ключ</string>
+    <string name="lockpattern_settings_enable_tactile_feedback_title">Виброотклик</string>
     <string name="lockpattern_settings_enable_power_button_instantly_locks">Блокировка клавишей питания</string>
     <string name="lockpattern_settings_choose_lock_pattern">Установить ключ</string>
     <string name="lockpattern_settings_change_lock_pattern">Изменить ключ</string>
     <string name="lockpattern_settings_help_how_to_record">Как начертить графический ключ разблокировки</string>
     <string name="lockpattern_too_many_failed_confirmation_attempts_header">Слишком много неудачных попыток!</string>
     <string name="lockpattern_too_many_failed_confirmation_attempts_footer">Повторите попытку через %d с.</string>
-    <string name="lock_setup">Настройка завершена</string>
-    <string name="app_name">Lewa Блок</string>
+    <string name="lock_setup">Блокировка настроена</string>
+    <string name="app_name">Lewa Блокировщик</string>
     <string name="cancel">Повтор</string>
-    <string name="unlock_set_unlock_screen_title">Использование локскрина</string>
+    <string name="unlock_set_unlock_screen_title">Использовать блокировку экрана</string>
     <string name="no_applications">Нет приложений</string>
     <string name="settings_safetylegal_activity_loading">Загрузка...</string>
     <string name="change_password_text">Изменить</string>
-    <string name="forget_password_text">Отмена</string>
+    <string name="forget_password_text">Отменить</string>
     <string name="manager_app_lock">Пароль приложения</string>
     <string name="cancel_password">Успешно отменено</string>
     <string name="pattern_screen_password">Использование графического ключа</string>
@@ -102,8 +102,8 @@
 
 
 
-    <string name="please_input_pwd">Ввод пароля</string>
-    <string name="input_again">Забыть</string>
+    <string name="please_input_pwd">Введите пароль</string>
+    <string name="input_again">Отменить</string>
     <string name="user_delete_button">Удалить</string>
     <string name="app_lock_settings">Настройки</string>
     <string name="lewa_applock_summary">Открытие заблокированного приложения требует пароля и выключение экрана блокирует приложение заново</string>
