--- a/Russian/main/LewaVirusDefense.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaVirusDefense.apk/res/values-ru/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="virus_library_update_notice">База данных о вирусах устарела!</string>
-    <string name="virus_library_update_adjust">База данных о вирусах устарела, обновите!</string>
-    <string name="virus_library_settings">Настройки базы данных</string>
-    <string name="timing_of_virus_library_update">Время обновления базы данных о вирусах</string>
-    <string name="virus_library_settings_summary">Автоматическое обновление базы данных по Wi-Fi</string>
+    <string name="virus_library_update_notice">Антивирусная база устарела!</string>
+    <string name="virus_library_update_adjust">Антивирусная база устарела, обновите!</string>
+    <string name="virus_library_settings">Настройки обновления</string>
+    <string name="timing_of_virus_library_update">Обновление антивирусной базы</string>
+    <string name="virus_library_settings_summary">Автоматическое обновление по Wi-Fi</string>
     <string name="virus_defense_title">Антивирусная защита</string>
     <string name="viruskill_title">Антивирус</string>
     <string name="viruskill_log_title">Журнал</string>
@@ -24,8 +24,8 @@
     <string name="need_to_kill2">Пожалуйста, запустите сканирование прямо сейчас</string>
     <string name="is_cancel1">Предлагаем пересканировать</string>
     <string name="is_cancel2">Проверка отменена, устройство не проверено</string>
-    <string name="scanner_title">Сканировать</string>
-    <string name="rescan_title">Пересканировать</string>
+    <string name="scanner_title">Старт</string>
+    <string name="rescan_title">Рестарт</string>
     <string name="clean_now">Очистить сейчас</string>
     <string name="init_scan">%</string>
     <string name="gap_notice">Проверено %s назад</string>
@@ -35,27 +35,27 @@
     <string name="defense_monitor_open">Мониторинг активен</string>
     <string name="defense_monitor_close1">Мониторинг остановлен</string>
     <string name="defense_monitor_close2">Неполная защита</string>
-    <string name="scan_counts">Файлов:</string>
-    <string name="scan_time">Время:</string>
-    <string name="viruse_counts">Заражено:</string>
-    <string name="caution_counts">Опасных:</string>
-    <string name="scan_continue">Продолжить</string>
-    <string name="scan_cancel">Отменить</string>
+    <string name="scan_counts">"Файлов: "</string>
+    <string name="scan_time">"Время: "</string>
+    <string name="viruse_counts">"Заражено: "</string>
+    <string name="caution_counts">"Опасных: "</string>
+    <string name="scan_continue">Далее</string>
+    <string name="scan_cancel">Отмена</string>
     <string name="scan_pause">Пауза</string>
     <string name="scan_pause_log">Сканирование остановлено</string>
     <string name="scan_finish">Выход</string>
-    <string name="done">Завершено</string>
+    <string name="done">Готово</string>
     <string name="clear_now">Очистить сейчас</string>
     <string name="scan_warm_tips">Внимание</string>
     <string name="scan_dialog_content">Сканирование не завершено</string>
     <string name="scan_of_clound">Онлайн-сканирование</string>
     <string name="scan_state_safe">Система защищена</string>
     <string name="scan_state_risk">Система под угрозой!</string>
-    <string name="scan_state_cloud_fail">Проверка завершена, сбой в онлайн-сканировании!</string>
+    <string name="scan_state_cloud_fail">Проверка завершена, сбой онлайн-сканирования!</string>
     <string name="scan_result_Congratulate">Поздравляем</string>
-    <string name="scan_result_tips">Система находится под защитой</string>
-    <string name="scan_result_suggestion">Подсказка:Переместить</string>
-    <string name="scan_result_suggestion_del">Подсказка:Удалить</string>
+    <string name="scan_result_tips">Система защищена</string>
+    <string name="scan_result_suggestion">Подсказка: Переместить</string>
+    <string name="scan_result_suggestion_del">Подсказка: Удалить</string>
     <string name="scan_virus_soft">Заражен</string>
     <string name="scan_caution_soft">Под угрозой</string>
     <string name="defense_notification">Напоминать о проверке</string>
@@ -74,28 +74,28 @@
     <string name="delete_notice">Удалить этот файл?</string>
     <string name="cloud_scan_error">Ошибка онлайн-сканирования!</string>
     <string name="cloud_scan_error_net">Ошибка онлайн-сканирования, нет сети!</string>
-    <string name="scan_init">Инициализация…</string>
-    <string name="scan_pause_init">Проверка остановлена, подождите…</string>
-    <string name="update_title">Обновление</string>
+    <string name="scan_init">Инициализация...</string>
+    <string name="scan_pause_init">Проверка остановлена, подождите...</string>
+    <string name="update_title">Обновление антивирусной базы</string>
     <string name="update_auto">Автообновление</string>
     <string name="update_toast">Проверка обновлений антивирусных баз...</string>
     <string name="update_wait">Обновление антивирусных баз...</string>
-    <string name="network_error">Сетевая ошибка:</string>
+    <string name="network_error">Ошибка сети</string>
     <string name="connect_error">Истекло время ожидания</string>
     <string name="update_tone">Внимание</string>
     <string name="update_note_version">Антивирусная база от %s </string>
     <string name="update_notice">Обновите до последней версии:</string>
     <string name="update_note_size">Размер обновления: %s</string>
-    <string name="update_note_already_latest">Базы актуальны</string>
+    <string name="update_note_already_latest">Антивирусные базы актуальны</string>
     <string name="update_note_known">Готово</string>
     <string name="update_tips">Регулярно обновляйте антивирусные базы</string>
     <string name="unupdate_tips">Вы давно не обновляли антивирусную базу!</string>
-    <string name="update_version">Версия:%s</string>
+    <string name="update_version">Версия антивирусной базы: %s</string>
     <string name="log_list_empty">Журнал отсутствует</string>
-    <string name="log_virus_counts">Заражено:%s</string>
-    <string name="log_caution_counts">Угроз:%s</string>
-    <string name="log_clear_counts">Очищено:%s</string>
-    <string name="log_unhandle_counts">Необработано:%s</string>
+    <string name="log_virus_counts">Заражено: %s</string>
+    <string name="log_caution_counts">Угроз: %s</string>
+    <string name="log_clear_counts">Очищено: %s</string>
+    <string name="log_unhandle_counts">Необработано: %s</string>
     <string name="log_clear_all">Удаление</string>
     <string name="log_if_clear_all">Подтвердите, чтобы удалить %s результаты сканирования</string>
     <string name="menu_actionbar_selected_items">%s отмечено</string>
@@ -107,7 +107,7 @@
     <string name="setting_scan_of_clound">Онлайн-сканирование</string>
     <string name="setting_cloud_kill_summary">Онлайн-сканирование дает более точные результаты</string>
     <string name="setting_timer_scan_summary">Проверка устройства по расписанию</string>
-    <string name="setting_time">Время начала сканирования</string>
+    <string name="setting_time">Время сканирования</string>
     <string name="setting_defense_schedule">График проверки</string>
     <string name="setting_everyday">Ежедневно</string>
     <string name="setting_everyweek">Еженедельно</string>
